--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,19 @@
     width: 300px;
     height: 50px; 
 }
+.demo{
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    background-color: gray;
+    display: inline-block;
+}
+.red {
+    background-color: red;
+}
+.green {
+    background-color: green;
+}
+.blue{
+    background-color: blue;
+}
